[package]
name = "l7_surface_mapper"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
hyper = { version = "0.14", features = ["full"] }
hyper-rustls = { version = "0.25", features = ["webpki-roots"] }
memmap2 = "0.9"
blake3 = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
futures = "0.3"
anyhow = "1"
indicatif = "0.17"
tokio-rustls = "0.25"
rustls = "0.23"
webpki-roots = "0.26"
x509-parser = "0.15"
url = "2.5.8"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
panic = "abort"

[build-dependencies]
winres = "0.1"